<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.3.0.RELEASE</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>com.mycompany</groupId>
    <artifactId>springboot-spring-kafka</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>springboot-spring-kafka</name>
    <description>Demo project for Spring Boot</description>

    <properties>
        <java.version>11</java.version>
    </properties>

    <modules>
        <module>string-serialization/string-producer-service</module>
        <module>string-serialization/string-consumer-service</module>
        <module>json-serialization/json-producer-service</module>
        <module>json-serialization/json-consumer-service</module>
        <module>avro-serialization/avro-producer-service</module>
        <module>avro-serialization/avro-consumer-service</module>
        <module>avro-2-serialization/avro-2-producer-service</module>
        <module>avro-2-serialization/avro-2-consumer-service</module>
        <module>avro-3-serialization/avro-3-producer-service</module>
        <module>avro-3-serialization/avro-3-consumer-service</module>
    </modules>

</project>
